improve filtering and sorting
